--- a/master/getting-started/openshift/patch-flow-logs.yaml
+++ b/master/getting-started/openshift/patch-flow-logs.yaml
@@ -4,6 +4,12 @@ spec:
      containers:
       - name: calico-node
         env:
+          # Enable Tigera Secure EE Prometheus denied packet reporting
+          - name: FELIX_PROMETHEUSREPORTERENABLED
+            value: "true"
+          # Make Tigera Secure EE Prometheus metrics available on port 9081
+          - name: FELIX_PROMETHEUSREPORTERPORT
+            value: "9081"
           # Enable Tigera Secure EE Flow Log generation
           - name: FELIX_FLOWLOGSFILEENABLED
             value: "true"
