--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
@@ -83,6 +83,10 @@ spec:
               value: "warning"
             - name: TIGERA_COMPLIANCE_REPORT_AFTER
               value: "30m"
+            - name: TIGERA_COMPLIANCE_JOB_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
 {{- if .Values.secure_es }}
             - name: ELASTIC_HOST
               valueFrom:
