Add imagePullSecrets to EE Helm templates
- Replacing static imagePullSecrets sections in manifest templates with dynamic value from base_values.yaml / values.yaml

--- a/_includes/master/charts/calico/base_values.yaml
+++ b/_includes/master/charts/calico/base_values.yaml
@@ -127,5 +127,13 @@ orch: ""
 rbac: ""
 platform: ""
 
+# Optionally specify docker configuration to be used for imagePullSecrets. 
+# Default to an empty list. 
+#
+# E.g. 
+# imagePullSecrets:
+#   <secret_name>: <.docker/config.json contents>
+imagePullSecrets: {}
+
 cloudControllers:
   enabled: false
