--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
@@ -124,6 +124,9 @@ spec:
             - name: ELASTIC_SSL_VERIFY
               value: "false"
 {{- end }}
+{{- if .Values.complianceController.env }}
+{{ toYaml .Values.complianceController.env | indent 12 }}
+{{- end }}
 {{- if .Values.secure_es }}
           volumeMounts:
             - name: elastic-ca-cert-volume
