--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-server.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-server.yaml
@@ -140,6 +140,9 @@ spec:
             - name: ELASTIC_SSL_VERIFY
               value: "false"
 {{- end }}
+{{- if .Values.complianceServer.env }}
+{{ toYaml .Values.complianceServer.env | indent 12 }}
+{{- end }}
 {{- if .Values.secure_es }}
           volumeMounts:
             - name: elastic-ca-cert-volume
