Fix compliance roles for report resources

--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
@@ -22,8 +22,8 @@ rules:
     verbs: ["list", "get", "watch"]
   - apiGroups: ["projectcalico.org"]
     resources:
-      - globalreporttype
-      - globalreport
+      - globalreporttypes
+      - globalreports
     verbs:
       - get
       - list
