--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-server.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-server.yaml
@@ -25,8 +25,8 @@ rules:
       - watch
   - apiGroups: ["projectcalico.org"]
     resources:
-      - globalreporttype
-      - globalreport
+      - globalreporttypes
+      - globalreports
     verbs:
       - get
       - list
