--- a/_includes/master/charts/calico/Chart.yaml
+++ b/_includes/master/charts/calico/Chart.yaml
@@ -1,5 +1,3 @@
 apiVersion: v1
-description: Tigera Secure Enterprise Edition
-name: tigera-secure-ee
-version: 0.1.0-0
-appVersion: master
+name: tigera-secure-ee-core
+description: Tigera Secure Enterprise Edition - Core components required in order to install the 'tigera-secure-ee' chart.
