--- a/_includes/master/charts/tigera-secure-lma/Chart.yaml
+++ b/_includes/master/charts/tigera-secure-lma/Chart.yaml
@@ -1,5 +1,3 @@
 apiVersion: v1
-appVersion: "1.0"
-description: Logging, metrics, and analytics for Tigera Secure Enterprise Edition
-name: tigera-secure-lma
-version: 0.1.0
+name: tigera-secure-ee
+description: Tigera Secure Enterprise Edition
