--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-snapshotter.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-snapshotter.yaml
@@ -1,4 +1,4 @@
-
+{{- $elasticMode := include "tigera-secure-lma.elasticsearch.mode" . }}
 kind: ServiceAccount
 apiVersion: v1
 metadata:
@@ -101,7 +101,7 @@ spec:
               value: ""
             - name: ELASTIC_SCHEME
               value: ""
-{{- if .Values.secure_es }}
+{{- if eq $elasticMode "external" }}
             - name: ELASTIC_HOST
               valueFrom:
                 configMapKeyRef:
@@ -137,12 +137,12 @@ spec:
 {{- if .Values.complianceSnapshotter.env }}
 {{ toYaml .Values.complianceSnapshotter.env | indent 12 }}
 {{- end }}
-{{- if .Values.secure_es }}
+{{- if eq $elasticMode "external" }}
           volumeMounts:
             - name: elastic-ca-cert-volume
               mountPath: /etc/compliance/elastic
 {{- end }}
-{{- if .Values.secure_es }}
+{{- if eq $elasticMode "external" }}
       volumes:
         # Should be created during installation process.
         - name: elastic-ca-cert-volume
