--- a/_includes/master/charts/tigera-secure-lma/templates/es-config-secret.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/es-config-secret.yaml
@@ -1,5 +1,5 @@
-{{- if eq .Values.elasticsearchType "external" }}
-{{- include "tigera-secure-lma.elasticsearch.validate" . }}
+{{- $elasticMode := include "tigera-secure-lma.elasticsearch.mode" . }}
+{{- if eq $elasticMode "external" }}
 kind: Secret
 apiVersion: v1
 metadata:
