--- a/master/getting-started/openshift/secure-es/operator.yaml
+++ b/master/getting-started/openshift/secure-es/operator.yaml
@@ -1,8 +1,7 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-lma --execute templates/operator.yaml %}
+{% helm tigera-secure-lma secure-es --execute templates/operator.yaml %}
 orch: openshift
-elasticsearchType: external
 createCustomResources: false
 {% endhelm %}
