--- a/master/manifests/compliance/secure-es/compliance.yaml
+++ b/master/manifests/compliance/secure-es/compliance.yaml
@@ -2,6 +2,7 @@
 layout: null
 ---
 
-{% helm tigera-secure-lma --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-snapshotter.yaml  --execute templates/compliance/compliance-controller.yaml %}
-secure_es: true
+{% helm tigera-secure-lma secure-es --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-snapshotter.yaml  --execute templates/compliance/compliance-controller.yaml %}
+# TODO: fix bug where an empty helm includer doesn't render the manifest?
+foo: bar
 {% endhelm %}
