--- a/_includes/master/charts/tigera-secure-lma/templates/operator.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/operator.yaml
@@ -1,8 +1,9 @@
+{{- $elasticMode := include "tigera-secure-lma.elasticsearch.mode" . }}
 # This manifest includes the following component versions:
 #   quay.io/coreos/prometheus-operator:{{.Values.prometheusOperator.tag}}
 #   quay.io/coreos/prometheus-config-reloader:{{.Values.prometheusConfigReloader.tag}}
 #   quay.io/coreos/configmap-reload:{{.Values.configmapReload.tag}}
-{{- if eq .Values.elasticsearchType "operator" }}
+{{- if eq $elasticMode "operator" }}
 #   upmcenterprises/elasticsearch-operator:{{.Values.elasticsearchOperator.tag}}
 {{- end }}
 ---
@@ -123,7 +124,7 @@ spec:
             cpu: 200m
             memory: 100Mi
 
-{{- if eq .Values.elasticsearchType "operator" }}
+{{- if eq $elasticMode "operator" }}
 ---
 
 # Service account for the elasticsearch cluster
@@ -134,7 +135,7 @@ metadata:
   namespace: calico-monitoring
 
 ---
-{{- if and (not .Values.runElasticsearchOperatorClusterAdmin) (eq .Values.elasticsearchType "operator") }}
+{{- if and (not .Values.runElasticsearchOperatorClusterAdmin) (eq $elasticMode "operator") }}
 
 # Permissions for the elasticsearch operator
 apiVersion: rbac.authorization.k8s.io/v1beta1
