--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico.yaml
@@ -1,8 +1,6 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-lma --execute templates/monitor-calico.yaml %}
-secure_es: true
-elasticsearchType: external
+{% helm tigera-secure-lma secure-es --execute templates/monitor-calico.yaml %}
 createCustomResources: false
 {% endhelm %}
