--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/operator.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/operator.yaml
@@ -1,7 +1,6 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-lma --execute templates/operator.yaml %}
-elasticsearchType: external
+{% helm tigera-secure-lma secure-es --execute templates/operator.yaml %}
 createCustomResources: false
 {% endhelm %}
