--- a/master/manifests/compliance/compliance.yaml
+++ b/master/manifests/compliance/compliance.yaml
@@ -3,5 +3,6 @@ layout: null
 ---
 
 {% helm tigera-secure-lma --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-controller.yaml --execute templates/compliance/compliance-snapshotter.yaml %}
-secure_es: false
+# TODO: fix bug where an empty helm includer doesn't render the manifest?
+foo: bar
 {% endhelm %}
