add missing menu for service adverts (#1048)

--- a/_data/v2_3/navbars/usage.yml
+++ b/_data/v2_3/navbars/usage.yml
@@ -141,6 +141,8 @@ toc:
   path: /usage/decommissioning-a-node
 - title: Configuring Conntrack
   path: /usage/configuration/conntrack
+- title: Advertising Kubernetes services
+  path: /usage/service-advertisement
 - title: Troubleshooting
   path: /usage/troubleshooting/
 - title: Frequently Asked Questions
