Adding/fixing image pull secret configuration for templated manifest files for LMA EE Helm chart.

--- a/_includes/master/charts/tigera-secure-lma/base_values.yaml
+++ b/_includes/master/charts/tigera-secure-lma/base_values.yaml
@@ -172,5 +172,13 @@ elasticsearch:
     username: tigera-ee-installer
     password: ""
 
+# Optionally specify docker configuration to be used for imagePullSecrets. 
+# Default to an empty list. 
+#
+# E.g. 
+# imagePullSecrets:
+#   <secret_name>: <.docker/config.json contents>
+imagePullSecrets: {}
+
 # TODO: move to helpers
 platform: ""
