--- a/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
@@ -436,8 +436,12 @@ spec:
         - effect: NoExecute
           operator: Exists
       serviceAccountName: tigera-fluentd
+{{- if .Values.imagePullSecrets }}
       imagePullSecrets:
-        - name: cnx-pull-secret
+{{- range $key, $value := .Values.imagePullSecrets }}
+        - name: {{ $key }}
+{{- end }}
+{{- end }}
       containers:
         - name: fluentd
           image: {{.Values.fluentd.image}}:{{.Values.fluentd.tag}}
@@ -669,8 +673,12 @@ spec:
           tolerations:
             - key: node-role.kubernetes.io/master
               effect: NoSchedule
+{{- if .Values.imagePullSecrets }}
           imagePullSecrets:
-            - name: cnx-pull-secret
+{{- range $key, $value := .Values.imagePullSecrets }}
+            - name: {{ $key }}
+{{- end }}
+{{- end }}
           containers:
             - name: tigera-es-curator
               image: {{.Values.esCurator.image}}:{{.Values.esCurator.tag}}
@@ -757,8 +765,12 @@ spec:
   template:
     spec:
       restartPolicy: OnFailure
+{{- if .Values.imagePullSecrets }}
       imagePullSecrets:
-        - name: cnx-pull-secret
+{{- range $key, $value := .Values.imagePullSecrets }}
+        - name: {{ $key }}
+{{- end }}
+{{- end }}
       containers:
       - name: install
         image: {{.Values.elasticTseeInstaller.image}}:{{.Values.elasticTseeInstaller.tag}}
