Add left nav for new topic
Defend against DoS attack for Tigera EE 2.4

--- a/_data/master/navbars/security.yml
+++ b/_data/master/navbars/security.yml
@@ -108,3 +108,5 @@ toc:
     path: /security/intrusion-detection/job-descriptions
   - title: Customizing
     path: /security/intrusion-detection/customizing
+- title: Defend against a DoS attack
+  path: /security/defend-dos-attack   
