--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
@@ -85,7 +85,7 @@ spec:
 {{ tuple .Values.complianceController.resources | include "tigera-secure-lma.resourceLimits" | indent 10 -}}
           env:
             - name: LOG_LEVEL
-              value: "warning"
+              value: "info"
             - name: TIGERA_COMPLIANCE_REPORT_AFTER
               value: "30m"
             - name: TIGERA_COMPLIANCE_JOB_NAMESPACE
