--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-server.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-server.yaml
@@ -107,7 +107,7 @@ spec:
 {{ tuple .Values.complianceServer.resources | include "tigera-secure-lma.resourceLimits" | indent 10 -}}
           env:
             - name: LOG_LEVEL
-              value: "warning"
+              value: "info"
             - name: ELASTIC_INDEX_SUFFIX
               valueFrom:
                 configMapKeyRef:
