--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-snapshotter.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-snapshotter.yaml
@@ -95,7 +95,7 @@ spec:
 {{ tuple .Values.complianceSnapshotter.resources | include "tigera-secure-lma.resourceLimits" | indent 10 -}}
           env:
             - name: LOG_LEVEL
-              value: "warning"
+              value: "info"
             - name: TIGERA_COMPLIANCE_SNAPSHOT_HOUR 
               value: "0"
             - name: ELASTIC_INDEX_SUFFIX
