--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-ecs/cnx-mgr-eks.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-ecs/cnx-mgr-eks.yaml
@@ -1,6 +1,6 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-lma --execute templates/manager.yaml %}
+{% helm tigera-secure-lma --execute templates/manager.yaml --execute templates/compliance/compliance-server.yaml --execute templates/compliance/compliance-controller.yaml --execute templates/compliance/compliance-snapshotter.yaml %}
 platform: eks
 {% endhelm %}
