IDS controller uses cluster name
Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
@@ -924,6 +924,11 @@ spec:
             command: ["/healthz", "readiness"]
           initialDelaySeconds: 5
         env:
+          - name: CLUSTER_NAME
+            valueFrom:
+              configMapKeyRef:
+                name: tigera-es-config
+                key: tigera.elasticsearch.cluster-name
 {{- if eq $elasticMode "external" }}
           - name: ELASTIC_HOST
             valueFrom:
