--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
@@ -82,6 +82,9 @@ spec:
       containers:
         - name: compliance-controller
           image: {{.Values.complianceController.image}}:{{.Values.complianceController.tag}}
+{{- if include "tigera-secure-lma.resourceLimitsConfigured" (tuple .Values.complianceController.resources) }}
+{{ tuple .Values.complianceController.resources | include "tigera-secure-lma.resourceLimits" | indent 10 }}
+{{- end }}
           env:
             - name: LOG_LEVEL
               value: "warning"
