--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-snapshotter.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-snapshotter.yaml
@@ -92,6 +92,9 @@ spec:
       containers:
         - name: compliance-snapshotter
           image: {{.Values.complianceSnapshotter.image}}:{{ .Values.complianceSnapshotter.tag }}
+{{- if include "tigera-secure-lma.resourceLimitsConfigured" (tuple .Values.complianceSnapshotter.resources) }}
+{{ tuple .Values.complianceSnapshotter.resources | include "tigera-secure-lma.resourceLimits" | indent 10 }}
+{{- end }}
           env:
             - name: LOG_LEVEL
               value: "warning"
